...
	<string name="editor_menu_open_sketch_properties">Sketch Properties</string>
	<string name="editor_menu_copy_to_sketchbook">Copy to Sketchbook</string>
	<string name="editor_menu_move_temp_to_sketchbook">Move to Sketchbook</string>
	<!-- Note that "copy sketch" currently only appears in the sketch properties menu. -->
	<string name="editor_menu_copy_sketch">Copy Sketch</string>
	
	<string name="editor_menu_tab_new">New Tab</string>
	<string name="editor_menu_tab_rename">Rename Tab</string>
	<string name="editor_menu_tab_duplicate">Duplicate Tab</string>
	<string name="editor_menu_tab_delete">Delete Tab</string>
	
	<!-- This is the title of the settings activity. -->
	<string name="title_activity_settings">Settings</string>
	
	<!-- This is the last menu item in all activities except for settings activities themselves. -->
	<string name="menu_open_settings">Settings</string>
	
	<string name="title_activity_sketch_properties">Sketch Properties</string>
	
	<!-- Generic dialog options used in a lot of places. -->
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="delete">Delete</string>
	<string name="create">Create</string>
	<string name="overflow_more">More</string>
	
	<!-- An empty array - used in some cases. Should not be translated. -->
	<string-array name="empty"></string-array>
	
...
	
	<!-- Error messages shown to the user when they try to create or rename a tab to an invalid
	     name. -->
	<string name="tab_name_invalid_first_char">Error: Tab names must not start with a number or an underscore!</string>
	<string name="tab_name_invalid_char">Error: Tab names may contain only letters, numbers, and underscores!</string>
	<string name="tab_name_invalid_no_char">Error: Tab names must contain text!</string>
	<string name="tab_name_invalid_same_title">Error: This tab already exists!</string>
	
	<!-- Error messages shown to the user when trying to name the sketch something invalid when
	     the message area is not visible - i.e. the drawer and sketch properties. -->
	<string name="sketch_name_invalid_dialog_title">Invalid Name</string>
	<string name="sketch_name_invalid_dialog_message_no_char">Sketch names must contain text!</string>
	<string name="sketch_name_invalid_dialog_message_first_char">Sketch names must not start with a number or an underscore!</string>
...
