<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/menu_run"
        android:icon="@drawable/ic_action_run"
        android:showAsAction="ifRoom"
        android:title="@string/menu_run"/>
    <item
        android:id="@+id/menu_stop"
        android:icon="@drawable/ic_action_stop"
...
